# E-mem

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  NOTICE  PROJECT_REVIEW.md  QUICKSTART.md  README.md  config.example.py  config.example.yaml  config.kv.yaml  config.py  config.text.yaml  example_simple.py  main.py  pyproject.toml  requirements.txt  test_installation.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  CONFIG_MODELS.md  CONFIG_REFERENCE.md  FILE_ORGANIZATION.md  GUIDES.md  IMPLEMENTATION_SUMMARY.md  MODEL_COMPATIBILITY.md  ORGANIZATION_SUMMARY.md  PERSISTENCE.md  QUICKSTART_TEXT_STORAGE.md  README.md  TEXT_STORAGE_README.md
evaluation/: .gitignore  README.md  __init__.py  config_utils.py  eval_locomo.py  example.config.yaml  load_dataset.py  run_eval.sh  test_load.py  test_prompt.py  test_setup.py  utils.py
evaluation/hotpotqa/: IMPLEMENTATION.md  README.md  config.example.yaml  config.kv.yaml  config.text.yaml  eval_hotpotqa.py
evaluation/locomo/: README.md  __init__.py  config.example.yaml  config.kv.yaml  config.text.yaml  eval_locomo.py  load_dataset.py  test_prompt.py  utils.py
evaluation/locomo/eval_data/: eval_test_small.json  locomo10_part1.json  specific_questions.json
examples/: example_storage_comparison.py  example_text_storage.py  quickstart.py
scripts/: eval_hotpotqa.sh  eval_locomo.sh
src/: __init__.py
src/agent/: base.py
src/config/: __init__.py  schema.py
src/conversation_manager/: __init__.py  base_chat_manager.py  chat_handler.py  factory.py
src/memory/: __init__.py
src/memory/core/: __init__.py  loop_handler.py  text_loop_handler.py
src/memory/kv_block_manager/: __init__.py  block.py  metadata.py  text_block.py
src/memory/memory_agent/: agent.py  text_agent.py
src/utils/: __init__.py  parser.py  prompt.py
tests/: README.md  __init__.py  conftest.py  test_base_agent.py  test_chat_manager.py  test_config_module.py  test_config_schema.py  test_eval_hotpotqa.py  test_eval_hotpotqa_extended.py  test_eval_locomo.py  test_evaluation_config_utils.py  test_evaluation_loader.py  test_evaluation_logic.py  test_evaluation_utils.py  test_hybrid_router.py  test_kv_block.py  test_memory_agent.py  test_memory_agent_batch.py  test_memory_agent_extended.py  test_memory_handler.py  test_multi_model_metadata.py  test_parser.py  test_persistence.py  test_router.py  test_router_extended.py  test_text_memory_handler.py  test_text_storage.py  verify_implementation.py
(+6 files in other folders)
