[project]
name = "E-mem"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.12.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "coverage==7.12.0",
    "datasets>=4.4.1",
    "distro==1.9.0",
    "filelock==3.20.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "isort==7.0.0",
    "jieba>=0.42.1",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6",
    "nltk==3.9.2",
    "numpy==2.3.5",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "openai==2.8.1",
    "packaging==25.0",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "psutil==7.1.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rouge-score==0.1.2",
    "ruff==0.14.7",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentence-transformers==5.1.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken>=0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.5.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "1.0.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
